apps/arr-stack/whisparr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  namespace: whisparr
  labels:
    servarr.app: whisparr
spec:
  replicas: 1
  selector:
    matchLabels:
      servarr.app: whisparr
  template:
    metadata:
      labels:
        servarr.app: whisparr
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      containers:
        - name: whisparr
          image: ghcr.io/hotio/whisparr:nightly
          ports:
            - containerPort: 6969
          volumeMounts:
            - name: data
              mountPath: /config
            - name: xxx
              mountPath: "/xxx"
            - name: sabnzbd-downloads
              mountPath: "/sabnzbd-downloads"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: whisparr-data
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
        - name: xxx
          persistentVolumeClaim:
            claimName: jellyfin-xxx-pvc
